--- a/poemas.html
+++ b/poemas.html
@@ -75,7 +75,7 @@ Quando menos se espera, a fadiga toma conta<br>
 O an&ecirc;mico, abatido, j&aacute; nem se desaponta<br>
 E convive naturalmente com aquilo que o destro&ccedil;a<br>
 <br>
-E o que seria a paix&atilde;o, se n&atilde;o mais outro sintoma, outra dor?<br>
+E o que seria a paix&atilde;o, sen&atilde;o mais outro sintoma, outra dor?<br>
 Falta de ar, tontura, cora&ccedil;&atilde;o acelerado<br>
 Triste &eacute; o pesar de um apaixonado<br>
 De um an&ecirc;mico de amor
@@ -108,32 +108,31 @@ Mas com receio demais de me queimar
     {
 titulo: "",
 texto: `
-Nada no mundo mais me fascina
-Que o esplendor de uma noite estrelada
-Que a paz de chuvosa matina 
-
-Nada no mundo me desatina
-Mais que a presença da pessoa amada
+Nada no mundo mais me fascina<br>
+Que o esplendor de uma noite estrelada<br>
+Que a paz de chuvosa matina<br>
+<br>
+Nada no mundo me desatina<br>
+Mais que a presença da pessoa amada<br>
 Mais que o sorriso de certa menina
-
 `
     },
     {
 titulo: "",
 texto: `
-Abro a janela e miro o céu
-Uma noite cheia de estrelas
-A Lua brilha alta, imponente para todos 
-Mas insegura de si
-
-Sol já posto, a Lua reflete o seu brilho 
-Um sinal de que o Sol não se foi, esperança de nova manhã
-Mas e se ele não raiar novamente?
-O que é Lua sem Sol? O que é Lua sem luar?
-
-Assim passam-se as noites, lindas mas melancólicas 
-Esperando por um novo dia, que pode nunca chegar
-Repletas de estrelas, radiantes mas longínquas
+Abro a janela e miro o céu<br<
+Uma noite cheia de estrelas<br>
+A Lua brilha alta, imponente para todos<br>
+Mas insegura de si<br>
+<br>
+Sol já posto, a Lua reflete o seu brilho<br>
+Um sinal de que o Sol não se foi, esperança de nova manhã<br>
+Mas e se ele não raiar novamente?<br>
+O que é Lua sem Sol? O que é Lua sem luar?<br>
+<br>
+Assim passam-se as noites, lindas mas melancólicas<br>
+Esperando por um novo dia, que pode nunca chegar<br>
+Repletas de estrelas, radiantes mas longínquas<br>
 Que refletem as histórias de milhões de anos atrás
 `
     },
@@ -141,109 +140,109 @@ Que refletem as histórias de milhões de anos atrás
     {
 titulo: "",
 texto: `
-Sempre é difícil esse primeiro verso
-Depois o segundo, chegando furtivo
-Para quebrar o bloqueio criativo
-No qual eu estou assim tão submerso
+Sempre é difícil esse primeiro verso<br>
+Depois o segundo, chegando furtivo<br>
+Para quebrar o bloqueio criativo<br>
+No qual eu estou assim tão submerso<br>
+<br>
+Uma estrofe passou: já foi um avanço<br>
+E a segunda ainda está em processo<br>
+Não é nada fácil, sincero confesso<br>
+Vamos ver ainda se o final alcanço<br>
+<br>
+Assim, de uma estrofe se faz um poema<br>
+E a estrofe, ela mesma, se faz de uma ideia<br>
+Tal como de um lobo se faz alcateia<br>
+E de um animal se faz ecossistema<br>
+<br>
+Agora, essa ideia, tão pobre que seja<br>
+Com métrica e rima dá pra disfarçar<br>
+Falando do Sol, da Lua e do mar,<br>
+Chegando ao efeito que o poeta almeja<br>
 
-Uma estrofe passou: já foi um avanço
-E a segunda ainda está em processo
-Não é nada fácil, sincero confesso
-Vamos ver ainda se o final alcanço
-
-Assim, de uma estrofe se faz um poema
-E a estrofe, ela mesma, se faz de uma ideia
-Tal como de um lobo se faz alcateia
-E de um animal se faz ecossistema
-
-Agora, essa ideia, tão pobre que seja
-Com métrica e rima dá pra disfarçar
-Falando do Sol, da Lua e do mar,
-Chegando ao efeito que o poeta almeja
-
-Após quatro estrofes de enrolação
-Enfim vem a quinta estrofe derradeira
-Espero que gostem, penei noite inteira
-Pra doar um pouco da minha emoção
-
-Espere um pouquinho, não saia ainda
-Tem mais uns três versos querendo passar
-Pois bem, quem diria, antes do Sol raiar
+Após quatro estrofes de enrolação<br>
+Enfim vem a quinta estrofe derradeira<br>
+Espero que gostem, penei noite inteira<br>
+Pra doar um pouco da minha emoção<br>
+<br>
+Espere um pouquinho, não saia ainda<br>
+Tem mais uns três versos querendo passar<br>
+Pois bem, quem diria, antes do Sol raiar<br>
 Descobri enfim como o poema finda
 `
     },
     {
 titulo: "Aguardo",
 texto: `
-Cada minuto que passa
-Parece dois, até três
-E não importa o que eu faça
-Esvai-se minha lucidez
-
-Ando incerto do destino
-Com olhar vago e distante
-Um mal-estar clandestino
-Se apossa de mim num instante
-
-Meu corpo todo se gela
-Enquanto espero a resposta
-Que pode nunca chegar 
-
-E nesse aguardo infinito
-Sou como barco a vela
+Cada minuto que passa<br>
+Parece dois, até três<br>
+E não importa o que eu faça<br>
+Esvai-se minha lucidez<br>
+<br>
+Ando incerto do destino<br>
+Com olhar vago e distante<br>
+Um mal-estar clandestino<br>
+Se apossa de mim num instante<br>
+<br>
+Meu corpo todo se gela<br>
+Enquanto espero a resposta<br>
+Que pode nunca chegar<br>
+<br>
+E nesse aguardo infinito<br>
+Sou como barco a vela<br>
 Naufragando em alto-mar
 `
     },
     {
 titulo: "",
 texto: `
-Vou varando a madrugada
-Vendo a estrela que cintila
-Vendo a vida que cochila
-Vastidão exagerada
-
-Vacilando pela estrada Vendo o vento que sibila
-Vendo a lua que rutila
-Solidão exacerbada
-
-Agravada pela noite
-Que tal qual severo açoite
-Faz o corpo estremecer
-
-Com saudades do futuro
-Vou vagando pelo escuro
+Vou varando a madrugada<br>
+Vendo a estrela que cintila<br>
+Vendo a vida que cochila<br>
+Vastidão exagerada<br>
+<br>
+Vacilando pela estrada Vendo o vento que sibila<br>
+Vendo a lua que rutila<br>
+Solidão exacerbada<br>
+<br>
+Agravada pela noite<br>
+Que tal qual severo açoite<br>
+Faz o corpo estremecer<br>
+<br>
+Com saudades do futuro<br>
+Vou vagando pelo escuro<br>
 Até o alvorecer
 `
     },
     {
 titulo: "",
 texto: `
-Em questão de um momento
-Apossou-se um sentimento
-Que eu não queria ter
-Sentimento insistente
-Que aparece de repente
-E não quer deixar de ser
-
-Em questão de um instante
-Imagino-me um amante
-De um singelo e puro amor
-Um amor de tal requinte
-Que no segundo seguinte
-Faz-me entrar em estupor
-
-Em questão de um segundo
-Sinto a paz reinar no mundo
-E a paixão a se expandir
-Sinto o coração batendo
-E o sentimento crescendo
-Sem que eu o possa reprimir
-
-Em questão de um minuto
-O amor, outrora bruto
-Permitiu-se lapidar
-E o que antes era incerto
-Revelou de peito aberto
+Em questão de um momento<br>
+Apossou-se um sentimento<br>
+Que eu não queria ter<br>
+Sentimento insistente<br>
+Que aparece de repente<br>
+E não quer deixar de ser<br>
+<br>
+Em questão de um instante<br>
+Imagino-me um amante<br>
+De um singelo e puro amor<br>
+Um amor de tal requinte<br>
+Que no segundo seguinte<br>
+Faz-me entrar em estupor<br>
+<br>
+Em questão de um segundo<br>
+Sinto a paz reinar no mundo<br>
+E a paixão a se expandir<br>
+Sinto o coração batendo<br>
+E o sentimento crescendo<br>
+Sem que eu o possa reprimir<br>
+<br>
+Em questão de um minuto<br>
+O amor, outrora bruto<br>
+Permitiu-se lapidar<br>
+E o que antes era incerto<br>
+Revelou de peito aberto<br>
 Como é bom poder amar!
 `
     },
