--- a/poemas.html
+++ b/poemas.html
@@ -249,7 +249,129 @@ Como é bom poder amar!
     {
 titulo: "",
 texto: `
+Quando escrevo, é porque devo<br>
+Porque algo em mim me obriga<br>
+A poesia, que consola<br>
+É também minha inimiga<br>
+<br>
+Mil palavras regurgito <br>
+Não as posso digerir<br>
+Mil ideias eu cogito<br>
+Até uma me servir<br>
+<br>
+Basta um coração aflito<br>
+Brotam versos como flor<br>
+Se a paixão é um delito<br>
+Sua sentença é o amor<br>
 
+Esse amor compõe sonetos<br>
+Cantos, odes e sonatas<br>
+Cartas, sátiras, livretos<br>
+Elegias e cantatas<br>
+<br>
+Eu escrevo porque devo<br>
+Pois sem isso, morreria<br>
+Afogado entre as estrofes<br>
+Sufocado de poesia
+
+`
+    },
+    {
+titulo="Ode à neve",
+texto=`
+Tudo, com neve,<br>
+Fica um pouco mais leve<br>
+Mesmo o frio já não incomoda assim tanto<br>
+<br>
+Tudo o que é belo<br>
+Fica ainda mais singelo<br> 
+Face a seu mágico e indescritível encanto<br>
+<br>
+Tudo, repito,<br>
+Fica um pouco mais bonito<br>
+Quando o seu alvo véu a Terra cobre<br>
+<br>
+Durante o inverno<br>
+Torna tudo mais terno<br>
+E até a vida em si fica mais nobre<br>
+<br>
+Em seus flocos finos<br>
+Carrega destinos<br>
+Com uma perseverança sem igual (desde o longínquo céu)<br>
+<br>
+E, quando já quente,<br>
+Derrete, contente<br>
+Sabendo que chegou ao seu final (e que cumpriu o seu papel)
+`
+    },
+    {
+titulo: "",
+texto: `
+Estou farto de virar noites em claro<br>
+Procurando explicações que não me deram<br>
+Tenho de seguir em frente sem amparo<br>
+A decência de contar sequer tiveram<br>
+<br>
+Em vão busco por respostas escondidas<br>
+Vasculho minha mente como um historiador<br>
+Preciso da verdade pra curar minhas feridas<br>
+Mas nada há de concreto, além do que eu possa supor<br>
+<br>
+Me pergunto como pode, tal pessoa<br>
+Ao dormir, ter tão tranquila consciência<br> 
+E preciso admitir, por mais que doa<br>
+<br>
+Que desejo, por fugaz breve momento<br>
+Nessa minha imperfeita existência <<br>
+A seus sonhos um pouquinho de tormento
+
+`
+    },
+    {
+titulo: "",
+texto: `
+Já um poema não basta<br>
+Pra descrever o que sinto<br>
+Uma saudade tão vasta<br>
+Num tão pequeno recinto<br>
+<br>
+Lá na cidade anoitece<br>
+Aqui, nem dia existe<br>
+Enquanto ela não aparece<br>
+Só o que resta é ser triste<br>
+<br>
+Mesmo sozinho na cama<br>
+Discuto com meus devaneios<br>
+Nem quando o sono me chama<br>
+Deixam-me em paz meus receios<br>
+<br>
+Lentas vão passando as horas<br>
+Reflexão infinita<br>
+Mas não me desejem melhoras<br>
+Pois a dor de amor é a dor mais bonita
+
+`
+    },
+    {
+titulo: "",
+texto: `
+Não te peço que me ames como eu te amo a ti<br>
+Pois a chama da paixão jamais permite-se domar <br>
+Me contento em contemplar-te, tal qual naquele jantar<br>
+E contar-te tudo aquilo que senti quando te vi<br>
+<br>
+Não exijo-te um amor que tu a mim não possas dar<br>
+Mas queria que soubesses que te tenho tal apreço <br>
+Que até mesmo toda regra de gramática eu esqueço <br>
+Se com isso eu puder-te um poema dedicar<br>
+<br>
+A mim basta que te lembres que eu existo<br>
+Que em mim penses como um bom e caro amigo<br>
+Que recordes dos momentos que vivemos<br>
+<br>
+Já não sei se no futuro nos veremos<br>
+Mas me alegro se eu também for-te benquisto<br>
+Se eu souber que tu também me tens contigo
 `
     }
   ];
