--- a/poemas.html
+++ b/poemas.html
@@ -277,9 +277,9 @@ Sufocado de poesia
 `
     },
     {
-titulo="Ode à neve",
-texto=`
-Tudo, com neve,<br>
+titulo:"Ode à neve",
+texto: `
+      Tudo, com neve,<br>
 Fica um pouco mais leve<br>
 Mesmo o frio já não incomoda assim tanto<br>
 <br>
