--- a/poemas.html
+++ b/poemas.html
@@ -69,7 +69,7 @@ Que tira de meu rosto pouco a pouco todo o rosa<br>
 Que me empalidece tal qual uma anemia<br>
 <br>
 Verdade seja dita, n&atilde;o h&aacute; melhor analogia<br>
-O que &eacute; a car&ecirc;ncia, se n&atilde;o uma anemia?<br>
+O que &eacute; a car&ecirc;ncia, sen&atilde;o uma anemia?<br>
 Doen&ccedil;a sorrateira, que aos poucos se apossa<br>
 Quando menos se espera, a fadiga toma conta<br>
 O an&ecirc;mico, abatido, j&aacute; nem se desaponta<br>
@@ -159,7 +159,7 @@ Agora, essa ideia, tão pobre que seja<br>
 Com métrica e rima dá pra disfarçar<br>
 Falando do Sol, da Lua e do mar,<br>
 Chegando ao efeito que o poeta almeja<br>
-
+<br>
 Após quatro estrofes de enrolação<br>
 Enfim vem a quinta estrofe derradeira<br>
 Espero que gostem, penei noite inteira<br>
@@ -201,7 +201,8 @@ Vendo a estrela que cintila<br>
 Vendo a vida que cochila<br>
 Vastidão exagerada<br>
 <br>
-Vacilando pela estrada Vendo o vento que sibila<br>
+Vacilando pela estrada<br>
+Vendo o vento que sibila<br>
 Vendo a lua que rutila<br>
 Solidão exacerbada<br>
 <br>
@@ -263,7 +264,7 @@ Basta um coração aflito<br>
 Brotam versos como flor<br>
 Se a paixão é um delito<br>
 Sua sentença é o amor<br>
-
+<br>
 Esse amor compõe sonetos<br>
 Cantos, odes e sonatas<br>
 Cartas, sátiras, livretos<br>
@@ -322,7 +323,7 @@ Ao dormir, ter tão tranquila consciência<br>
 E preciso admitir, por mais que doa<br>
 <br>
 Que desejo, por fugaz breve momento<br>
-Nessa minha imperfeita existência <<br>
+Nessa minha imperfeita existência <br>
 A seus sonhos um pouquinho de tormento
 
 `
