--- a/poemas.html
+++ b/poemas.html
@@ -120,7 +120,7 @@ Mais que o sorriso de certa menina
     {
 titulo: "",
 texto: `
-Abro a janela e miro o céu<br<
+Abro a janela e miro o céu<br>
 Uma noite cheia de estrelas<br>
 A Lua brilha alta, imponente para todos<br>
 Mas insegura de si<br>
