--- a/poemas.html
+++ b/poemas.html
@@ -11,7 +11,7 @@
   <div class="toppane"><h1>Poemas - Lorenzo Andreaus</h1></div>
   <div class="d-flex">
     <div class="leftpane">
-      <div class="arrow-div"><span class="arrow" id="prev">&#8592;</span></div>
+      <div class="arrow-div arrow-left"><span class="arrow" id="prev">&#8592;</span></div>
     </div>
     
     <div class="middlepane">
@@ -20,7 +20,7 @@
     </div>
     
     <div class="rightpane">
-      <div class="arrow-div"><span class="arrow" id="next">&#8594;</span></div>
+      <div class="arrow-div arrow-right"><span class="arrow" id="next">&#8594;</span></div>
     </div>
   </div>
 </div>
