--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </li>
 
 <li>
-<a href="partituras.html">Piano compositions</a>
+<a href="compositions.html">Piano compositions</a>
 </li>
 
 <li>
