--- a/compositions.html
+++ b/compositions.html
@@ -1,1 +1,24 @@
+<html lang="pt">
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="poemastyle.css">
+  <title>Minhas Composições - Lorenzo Andreaus</title>
+</head>
 
+<body>
+  <div class="container">
+    
+  <div class="toppane"><h1>Minhas Composições - Lorenzo Andreaus</h1></div>
+  <div class="d-flex">
+    <div class="leftpane">
+      <div class="arrow-div arrow-left"><span class="arrow" id="prev">&#8592;</span></div>
+    </div>
+    
+    <div class="middlepane">
+      <h2 id="titulo"></h2>
+      <div id="texto" class="poema"></div>
+    </div>
+  
+  </div>
+</body>
+</html>
