--- a/poemas.html
+++ b/poemas.html
@@ -2,13 +2,13 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="poemastyle.css">
-  <title>Meus Poemas</title>
+  <title>Meus Poemas - Lorenzo Andreaus</title>
 </head>
 
 <body>
   <div class="container">
     
-  <div class="toppane"><h1>Poemas - Lorenzo Andreaus</h1></div>
+  <div class="toppane"><h1>Meus Poemas - Lorenzo Andreaus</h1></div>
   <div class="d-flex">
     <div class="leftpane">
       <div class="arrow-div arrow-left"><span class="arrow" id="prev">&#8592;</span></div>
