--- a/composicoes.html
+++ b/composicoes.html
@@ -11,9 +11,7 @@
   <div class="toppane"><h1>Minhas Composições - Lorenzo Andreaus</h1></div>
     
   <div class="middlepane">
-    <h2 id="titulo"></h2>
-    <div class="poema">
-      
+    <div class="composicoes">
       <ul>
         <li><a>Lamento em dó menor</a></li>  
       </ul>
