--- a/composicoes.html
+++ b/composicoes.html
@@ -10,7 +10,7 @@
     
   <div class="toppane"><h1>Minhas Composições - Lorenzo Andreaus</h1></div>
     
-  <div class="middlepane">
+  <div class="bottompane">
     <div class="composicoes">
       <ul>
         <li><a>Lamento em dó menor</a></li>  
