--- a/composicoes.html
+++ b/composicoes.html
@@ -13,7 +13,7 @@
   <div class="bottompane">
     <div class="composicoes">
       <ul>
-        <li><a>Lamento em dó menor</a></li>  
+        <li><a href="">Lamento em dó menor</a></li>  
       </ul>
     
     </div>
