--- a/composicoes.html
+++ b/composicoes.html
@@ -13,7 +13,7 @@
   <div class="bottompane">
     <div class="composicoes">
       <ul>
-        <li><a href="">Lamento em dó menor</a></li>  
+        <li><a href="">Lamento em dó menor</a>  <a class="mw-tmh-play" href="" title="Reproduzir áudio" role="button"><span class="mw-tmh-play-icon notheme"></span></a></li>  
       </ul>
     
     </div>
