--- a/composicoes.html
+++ b/composicoes.html
@@ -5,7 +5,7 @@
   <title>Minhas Composições - Lorenzo Andreaus</title>
 </head>
 
-<body>
+<body class="nosee_link">
   <div class="container">
     
   <div class="toppane"><h1>Minhas Composições - Lorenzo Andreaus</h1></div>
