--- a/composicoes.html
+++ b/composicoes.html
@@ -13,7 +13,8 @@
   <div class="bottompane">
     <div class="composicoes">
       <ul>
-        <li><a href="">Lamento em dó menor</a>  <a class="mw-tmh-play" href="" title="Reproduzir áudio" role="button"><span class="mw-tmh-play-icon notheme"></span></a></li>  
+        <li><a href="">Lamento em dó menor</a>
+          <audio controls><source src="musica.ogg" type="audio/ogg"> Your browser does not support the audio element.</audio></li>  
       </ul>
     
     </div>
