--- a/composicoes.html
+++ b/composicoes.html
@@ -14,7 +14,7 @@
     <div class="composicoes">
       <ul>
         <li><a href="">Lamento em dó menor</a>
-          <audio controls><source src="musica.ogg" type="audio/ogg"> Your browser does not support the audio element.</audio></li>  
+          <audio controls><source src="musica.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></li>  
       </ul>
     
     </div>
