--- a/composicoes.html
+++ b/composicoes.html
@@ -14,8 +14,17 @@
     <div class="composicoes">
       <ul>
         <li><a href="">Lamento em dó menor    </a>
-   <audio controls><source src="Vivaldi _ Winter - I.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></li>  
-      </ul>
+   <audio controls><source src="music.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></li>  
+     <li><a href="">Rondó em sol menor   </a>
+   <audio controls><source src="music.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></li>  
+
+      <li><a href="">Sonata em si bemol maior    </a>
+   <audio controls><source src="music.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></li>  
+
+        <li><a href="">Prelúdio em mi menor    </a>
+   <audio controls><source src="music.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></li>  
+
+    </ul>
     
     </div>
     
