--- a/composicoes.html
+++ b/composicoes.html
@@ -13,8 +13,8 @@
   <div class="bottompane">
     <div class="composicoes">
       <ul>
-        <li><a href="">Lamento em dó menor    </a>
-   <audio controls><source src="music.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></li>  
+        <li><a href="lamento-em-do-menor.pdf">Lamento em dó menor    </a>
+   <audio controls><source src="Lamento em dó menor.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></li>  
      <li><a href="">Rondó em sol menor   </a>
    <audio controls><source src="music.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></li>  
 
