--- a/composicoes.html
+++ b/composicoes.html
@@ -1,4 +1,4 @@
-<html lang="pt">
+l<html lang="pt">
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="poemastyle.css">
@@ -15,8 +15,8 @@
       <ul>
         <li><a href="lamento-em-do-menor.pdf">Lamento em dó menor    </a>
    <audio controls><source src="Lamento em dó menor.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></li>  
-     <li><a href="">Rondó em sol menor   </a>
-   <audio controls><source src="music.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></li>  
+     <li><a href="Rondó em sol menor.pdf">Rondó em sol menor   </a>
+   <audio controls><source src="Rondó em Gm.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></li>  
 
       <li><a href="">Sonata em si bemol maior    </a>
    <audio controls><source src="music.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></li>  
