--- a/composicoes.html
+++ b/composicoes.html
@@ -18,8 +18,8 @@ l<html lang="pt">
      <li><a href="Rondó em sol menor.pdf">Rondó em sol menor   </a>
    <audio controls><source src="Rondó em Gm.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></li>  
 
-      <li><a href="">Sonata em si bemol maior    </a>
-   <audio controls><source src="music.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></li>  
+      <li><a href="Sonata em Bb - mov 1.pdf">Sonata em si bemol maior    </a>
+   <audio controls><source src="Sonata em Bb - mov 1.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></li>  
 
         <li><a href="">Prelúdio em mi menor    </a>
    <audio controls><source src="music.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></li>  
