--- a/poemas.html
+++ b/poemas.html
@@ -50,7 +50,7 @@ V&atilde;, por&eacute;m, &eacute; toda a minha divaga&ccedil;&atilde;o<br>
 E todos sabem que o passado n&atilde;o se altera<br>
 Inspira&ccedil;&atilde;o &eacute; o que sobra, e c&aacute; estou<br>
 Remoendo cada detalhe de um tempo que j&aacute; passou<br>
-A esperar por ventos melhores na pr&oacute;xima primavera
+A esperar por ventos melhores na pr&oacute;xima primavera<br>
       `
     },
     {
@@ -78,7 +78,7 @@ E convive naturalmente com aquilo que o destro&ccedil;a<br>
 E o que seria a paix&atilde;o, sen&atilde;o mais outro sintoma, outra dor?<br>
 Falta de ar, tontura, cora&ccedil;&atilde;o acelerado<br>
 Triste &eacute; o pesar de um apaixonado<br>
-De um an&ecirc;mico de amor
+De um an&ecirc;mico de amor<br>
 
       `
     },
@@ -101,7 +101,7 @@ Ofuscando tudo que há no lugar<br>
 <br>
 E ao tentar me aproximar da chama, paraliso, impotente<br>
 Tão perto de alcançar a alegria<br>
-Mas com receio demais de me queimar
+Mas com receio demais de me queimar<br>
 
       `
     },
@@ -118,7 +118,7 @@ Que a paz de chuvosa matina<br>
 <br>
 Nada no mundo me desatina<br>
 Mais que a presença da pessoa amada<br>
-Mais que o sorriso de certa menina
+Mais que o sorriso de certa menina<br>
 `
     },
     {
@@ -137,7 +137,7 @@ O que é Lua sem Sol? O que é Lua sem luar?<br>
 Assim passam-se as noites, lindas mas melancólicas<br>
 Esperando por um novo dia, que pode nunca chegar<br>
 Repletas de estrelas, radiantes mas longínquas<br>
-Que refletem as histórias de milhões de anos atrás
+Que refletem as histórias de milhões de anos atrás<br>
 `
     },
 
@@ -172,7 +172,7 @@ Pra doar um pouco da minha emoção<br>
 Espere um pouquinho, não saia ainda<br>
 Tem mais uns três versos querendo passar<br>
 Pois bem, quem diria, antes do Sol raiar<br>
-Descobri enfim como o poema finda
+Descobri enfim como o poema finda<br>
 `
     },
     {
@@ -194,7 +194,7 @@ Que pode nunca chegar<br>
 <br>
 E nesse aguardo infinito<br>
 Sou como barco a vela<br>
-Naufragando em alto-mar
+Naufragando em alto-mar<br>
 `
     },
     {
@@ -216,7 +216,7 @@ Faz o corpo estremecer<br>
 <br>
 Com saudades do futuro<br>
 Vou vagando pelo escuro<br>
-Até o alvorecer
+Até o alvorecer<br>
 `
     },
     {
@@ -248,7 +248,7 @@ O amor, outrora bruto<br>
 Permitiu-se lapidar<br>
 E o que antes era incerto<br>
 Revelou de peito aberto<br>
-Como é bom poder amar!
+Como é bom poder amar!<br>
 `
     },
     {
@@ -277,7 +277,7 @@ Elegias e cantatas<br>
 Eu escrevo porque devo<br>
 Pois sem isso, morreria<br>
 Afogado entre as estrofes<br>
-Sufocado de poesia
+Sufocado de poesia<br>
 
 `
     },
@@ -306,7 +306,7 @@ Com uma perseverança sem igual (desde o longínquo céu)<br>
 <br>
 E, quando já quente,<br>
 Derrete, contente<br>
-Sabendo que chegou ao seu final (e que cumpriu o seu papel)
+Sabendo que chegou ao seu final (e que cumpriu o seu papel)<br>
 `
     },
     {
@@ -328,7 +328,7 @@ E preciso admitir, por mais que doa<br>
 <br>
 Que desejo, por fugaz breve momento<br>
 Nessa minha imperfeita existência <br>
-A seus sonhos um pouquinho de tormento
+A seus sonhos um pouquinho de tormento<br>
 
 `
     },
@@ -353,7 +353,7 @@ Deixam-me em paz meus receios<br>
 Lentas vão passando as horas<br>
 Reflexão infinita<br>
 Mas não me desejem melhoras<br>
-Pois a dor de amor é a dor mais bonita
+Pois a dor de amor é a dor mais bonita<br>
 
 `
     },
@@ -376,7 +376,41 @@ Que recordes dos momentos que vivemos<br>
 <br>
 Já não sei se no futuro nos veremos<br>
 Mas me alegro se eu também for-te benquisto<br>
-Se eu souber que tu também me tens contigo
+Se eu souber que tu também me tens contigo<br>
+`
+    },
+    {
+titulo: "",
+texto: `
+A distância é uma poesia<br>
+Serena e amarga, em igual quantia<br>
+A saudade é breve alento<br>
+Ligeira esperança, pairando no vento<br>
+<br>
+A paixão é fogo em brasa<br>
+Alastra-se intensa, com tudo arrasa<br>
+O receio é um inverno<br>
+Extenso e frio, mas doce e terno<br>
+<br>
+A poesia é uma saudade<br>
+É algo incompleto, faltando metade<br>
+O inverno é uma distância <br>
+O oposto de amor, de calor, de abundância<br>
+<br>
+Uma brasa é um receio <br>
+Pode alguém ferir, se o acertar em cheio<br>
+O alento é uma paixão <br>
+Um santo remédio ao frágil coração<br>
+<br>
+Que a distância não detenha<br>
+A paixão que em mim fulgura<br>
+Nesse inverno permanente<br>
+De receios infinitos<br>
+<br>
+E que a brasa dessa lenha<br>
+Feita de poesia pura<br>
+Tal saudade alimente<br>
+Dê alento aos mais aflitos<br>
 `
     }
   ];
