--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <li><a href="https://bdta.abcd.usp.br/item/003064080">Bachelor Thesis: “Algebraic Number Theory and Introduction to Class Field Theory” (in Portuguese)</a>
 </li>
 
-<li><a href="master-thesis.pdf">Master Thesis: “Equidistribution in Families of Abelian Varieties and Uniformity"</a>
+<li><a href="masters-thesis.pdf">Master's Thesis: “Equidistribution in Families of Abelian Varieties and Uniformity"</a>
 </li>
 </ul>    
 </section>
