--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
     <div id="coordonnees">
      <div id="coordonnees-texte">
         <h1> Lorenzo Andreaus </h1>
-        <p>I am currently a PhD student at <a href="https://u-paris.fr">Université Paris Cité</a>, under the supervision of 
-        <a href="https://webusers.imj-prg.fr/~marc.hindry/home_uk.html">Marc Hindry</a> and 
-        <a href="https://webusers.imj-prg.fr/~cyril.demarche/">Cyril Demarche</a>. I am studying 
-            <a href="https://encyclopediaofmath.org/wiki/Abelian_scheme">families of abelian varieties</a> and their
-        applications to counting <a href="https://en.wikipedia.org/wiki/Rational_point">rational points</a> on 
-            <a href="https://en.wikipedia.org/wiki/Projective_variety">projective varieties</a>.
+        <p>I am currently a PhD student at <a href="https://u-paris.fr" target="_blank" rel="noopener noreferrer">Université Paris Cité</a>, under the supervision of 
+        <a href="https://webusers.imj-prg.fr/~marc.hindry/home_uk.html" target="_blank" rel="noopener noreferrer">Marc Hindry</a> and 
+        <a href="https://webusers.imj-prg.fr/~cyril.demarche/" target="_blank" rel="noopener noreferrer">Cyril Demarche</a>. I am studying 
+            <a href="https://encyclopediaofmath.org/wiki/Abelian_scheme" target="_blank" rel="noopener noreferrer">families of abelian varieties</a> and their
+        applications to counting <a href="https://en.wikipedia.org/wiki/Rational_point" target="_blank" rel="noopener noreferrer">rational points</a> on 
+            <a href="https://en.wikipedia.org/wiki/Projective_variety" target="_blank" rel="noopener noreferrer">projective varieties</a>.
         <br>
         <br>
-        You can find my CV <a href="curriculum-vitae.pdf">here</a>.</p>
+        You can find my CV <a href="curriculum-vitae.pdf" target="_blank" rel="noopener noreferrer">here</a>.</p>
          <h2> Contact </h2>
     <div id="coordonnees">
-        <p><a href="https://www.imj-prg.fr">Institut de Mathématiques de Jussieu - Paris Rive Gauche (IMJ-PRG)
+        <p><a href="https://www.imj-prg.fr" target="_blank" rel="noopener noreferrer">Institut de Mathématiques de Jussieu - Paris Rive Gauche (IMJ-PRG)
 </a><br>
-        <a href="https://u-paris.fr">Université Paris Cité</a><br>
+        <a href="https://u-paris.fr" target="_blank" rel="noopener noreferrer">Université Paris Cité</a><br>
         Bâtiment Sophie Germain (PRG), Bureau 752<br>
        8 Place Aurélie Nemours, 75205 PARIS Cedex 13 <br><br>
         <strong>Email: </strong>lorenzo(dot)andreaus(at)imj-prg(dot)fr
@@ -53,7 +53,7 @@
          </div>
 
         <div id="moi">
-    <a href="curriculum-vitae.pdf"><img title="CV" alt="me" src="foto-de-perfil.jpg" id="me"></a>
+    <a href="curriculum-vitae.pdf" target="_blank" rel="noopener noreferrer"><img title="CV" alt="me" src="foto-de-perfil.jpg" id="me"></a>
     </div>
         
         
@@ -75,10 +75,10 @@
 
 <h2>Other Writings</h2>
 <ul>
-<li><a href="https://bdta.abcd.usp.br/item/003064080">Bachelor Thesis: “Algebraic Number Theory and Introduction to Class Field Theory” (in Portuguese)</a>
+<li><a href="https://bdta.abcd.usp.br/item/003064080" target="_blank" rel="noopener noreferrer">Bachelor Thesis: “Algebraic Number Theory and Introduction to Class Field Theory” (in Portuguese)</a>
 </li>
 
-<li><a href="masters-thesis.pdf">Master's Thesis: “Equidistribution in Families of Abelian Varieties and Uniformity"</a>
+<li><a href="masters-thesis.pdf" target="_blank" rel="noopener noreferrer">Master's Thesis: “Equidistribution in Families of Abelian Varieties and Uniformity"</a>
 </li>
 </ul>    
 </section>
@@ -87,15 +87,15 @@
 <h2>Beyond Mathematics</h2>
 <ul>
 <li>
-<a href="https://www.youtube.com/@presto-con-fuoco">Playing the piano</a>
+<a href="https://www.youtube.com/@presto-con-fuoco" target="_blank" rel="noopener noreferrer">Playing the piano</a>
 </li>
 
 <li>
-<a href="composicoes.html">Piano compositions</a>
+<a href="composicoes.html" target="_blank" rel="noopener noreferrer">Piano compositions</a>
 </li>
 
 <li>
-<a href="poemas.html">Poems I wrote (in Portuguese)</a>
+<a href="poemas.html" target="_blank" rel="noopener noreferrer">Poems I wrote (in Portuguese)</a>
 </li>
 </ul>
 </section>
