--- a/composicoes.html
+++ b/composicoes.html
@@ -13,15 +13,15 @@
   <div class="bottompane">
     <div class="composicoes">
       <ul>
-        <li><a href="lamento-em-do-menor.pdf">Lamento em dó menor    </a>
+        <li><a href="lamento-em-do-menor.pdf" target="_blank" rel="noopener noreferrer">Lamento em dó menor    </a>
    <audio controls><source src="Lamento em dó menor.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></li>  
-     <li><a href="Rondó em sol menor.pdf">Rondó em sol menor   </a>
+     <li><a href="Rondó em sol menor.pdf" target="_blank" rel="noopener noreferrer">Rondó em sol menor   </a>
    <audio controls><source src="Rondó em Gm.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></li>  
 
-      <li><a href="Sonata em Bb - mov 1.pdf">Sonata em si bemol maior    </a>
+      <li><a href="Sonata em Bb - mov 1.pdf" target="_blank" rel="noopener noreferrer">Sonata em si bemol maior    </a>
    <audio controls><source src="Sonata em Bb - mov 1.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></li>  
 
-        <li><a href="Prelúdio em mi menor.pdf">Prelúdio em mi menor    </a>
+        <li><a href="Prelúdio em mi menor.pdf" target="_blank" rel="noopener noreferrer">Prelúdio em mi menor    </a>
    <audio controls><source src="Prelúdio em mi menor.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></li>  
 
     </ul>
