--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <h2>Talks</h2>
 <ul>
-<li></li>
+<li><b>Diophantine Geometry: Problems and Techniques</b>. <a href="https://www.imj-prg.fr/gestion/evenement/affEvenement/53" target="_blank" rel="noopener noreferrer">Séminaires des Thésards de l'IMJ-PRG</a>, Sorbonne Université, 06/2025.</li>
 </ul>
 
 <h2>Other Writings</h2>
