--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 
 <h2>Other Writings</h2>
 <ul>
-<li><a href="https://bdta.abcd.usp.br/item/003064080" target="_blank" rel="noopener noreferrer">Bachelor Thesis: “Algebraic Number Theory and Introduction to Class Field Theory” (in Portuguese)</a>
+<li><a href="https://bdta.abcd.usp.br/item/003064080" target="_blank" rel="noopener noreferrer">Bachelor Thesis: “<a>Algebraic Number Theory and Introduction to Class Field Theory<a>” (in Portuguese)</a>
 </li>
 
-<li><a href="masters-thesis.pdf" target="_blank" rel="noopener noreferrer">Master's Thesis: “Equidistribution in Families of Abelian Varieties and Uniformity"</a>
+<li><a href="masters-thesis.pdf" target="_blank" rel="noopener noreferrer">Master's Thesis: “<b>Equidistribution in Families of Abelian Varieties and Uniformity</b>"</a>
 </li>
 </ul>    
 </section>
