--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <h2>Publications</h2>
 <ul>
 <li>
-    
+<b>Counting rational points on smooth quartic and quintic surfaces</b> (in preparation).
 </li>
 </ul>
 
@@ -75,7 +75,7 @@
 
 <h2>Other Writings</h2>
 <ul>
-<li><a href="https://bdta.abcd.usp.br/item/003064080" target="_blank" rel="noopener noreferrer">Bachelor Thesis: “<a>Algebraic Number Theory and Introduction to Class Field Theory<a>” (in Portuguese)</a>
+<li><a href="https://bdta.abcd.usp.br/item/003064080" target="_blank" rel="noopener noreferrer">Bachelor Thesis: “<b>Algebraic Number Theory and Introduction to Class Field Theory</b>” (in Portuguese)</a>
 </li>
 
 <li><a href="masters-thesis.pdf" target="_blank" rel="noopener noreferrer">Master's Thesis: “<b>Equidistribution in Families of Abelian Varieties and Uniformity</b>"</a>
