--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="style.css" />
 <title>Lorenzo Andreaus - Personal Page</title>
+<meta name="google-site-verification" content="Acd-197MbJoT88MMBQqWDgHtgZjRhajrORWZ0fp4b7E" />
 </head>
 
 <body class="nosee_link">
