--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 
 <head>
+<meta name="google-site-verification" content="Acd-197MbJoT88MMBQqWDgHtgZjRhajrORWZ0fp4b7E" />
 <meta charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="style.css" />
 <title>Lorenzo Andreaus - Personal Page</title>
