--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <h2>Publications</h2>
 <ul>
 <li>
-<a href="https://arxiv.org/abs/2511.07060"><b>Counting rational points on smooth quartic and quintic surfaces</b></a> (on arXiv).
+<a href="https://arxiv.org/abs/2511.07060" target="_blank" rel="noopener noreferrer"><b>Counting rational points on smooth quartic and quintic surfaces</b></a> (on arXiv).
 </li>
 </ul>
 
