--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <nav>
 <ul>
 <li>
-<a title="Home" href="https://lorenzo-andreaus.github.io">Home</a>
+<a title="Home" href="https://lorenzo-andreaus.github.io" class="nosee">Home</a>
 </li>
 <li>
-<a title="Research" href="#research">Research</a>
+<a title="Research" href="#research" class="nosee">Research</a>
 </li>
 <li>
-<a title="Beyond Mathematics" href="#personal">Beyond Mathematics</a>
+<a title="Beyond Mathematics" href="#personal" class="nosee">Beyond Mathematics</a>
 </li>
 </ul>
 </nav>
