--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 
 <h2>Other Writings</h2>
 <ul>
-<li><a href="https://bdta.abcd.usp.br/item/003064080" target="_blank" rel="noopener noreferrer">Bachelor Thesis: “<b>Algebraic Number Theory and Introduction to Class Field Theory</b>”</a> (in Portuguese)
+<li>Bachelor Thesis:“<a href="https://bdta.abcd.usp.br/item/003064080" target="_blank" rel="noopener noreferrer"><b>Algebraic Number Theory and Introduction to Class Field Theory</b></a>” (in Portuguese)
 </li>
 
-<li><a href="masters-thesis.pdf" target="_blank" rel="noopener noreferrer">Master's Thesis: “<b>Equidistribution in Families of Abelian Varieties and Uniformity</b>"</a>
+<li>Master's Thesis: “<a href="masters-thesis.pdf" target="_blank" rel="noopener noreferrer"><b>Equidistribution in Families of Abelian Varieties and Uniformity</b></a>"
 </li>
 </ul>    
 </section>
